# able-seaman

./: Cargo.toml  shell.nix
.github/workflows/: check.yaml
src/: api.rs  errors.rs  identifier.rs  k8s.rs  main.rs  manager.rs  meta.rs  objects.rs  release.rs  resources.rs
src/k8s/: annotations.rs  api_resource.rs  labels.rs  lock.rs  transaction.rs
src/release/: manager.rs  plan.rs  rollback.rs  verify.rs
src/utils/: fs.rs
