[package]
name = "able-seaman"
version = "0.1.0"
authors = ["Ole Krüger <able-seaman@vprsm.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = "0.56.0"
kube-runtime = "0.56.0"
k8s-openapi = { version = "0.11.0", default-features = false, features = ["v1_20"] }
tokio = { version = "1.5.0", features = ["full"] }
futures = "0.3"
serde_json = "1.0.59"
serde_yaml = "0.8.17"
serde = "1.0.123"
clap = "3.0.0-beta.2"
