[package]
name = "able-seaman"
version = "0.0.0"
authors = ["Ole Krüger <able-seaman@vprsm.de>"]
edition = "2018"

[dependencies]
kube = "0.57"
kube-runtime = "0.57"
k8s-openapi = { version = "0.12", default-features = false, features = ["v1_20"] }
tokio = { version = "1.5", features = ["full"] }
futures = "0.3"
serde_json = "1.0"
serde_yaml = "0.8"
serde = "1.0"
clap = "3.0.0-beta.2"
async-trait = "0.1"
